<resources>
    <string name="app_name">Inventory 2</string>
    <string name="show_specific_one">Show Specific One</string>
    <string name="product">PRODUCT</string>
    <string name="name">name</string>
    <string name="price">price</string>
    <string name="currency">€</string>
    <string name="quantity">quantity</string>
    <string name="supplier">SUPPLIER</string>
    <string name="phone_number">phone number</string>
    <string name="question_mark">\?</string>
    <string name="product_id">Product ID</string>
    <string name="save">Save</string>
    <string name="delete_all">Delete all</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="contact_us">Call us</string>
    <string name="empty_fields_alert">Please fill all fields to be able to proceed </string>
    <string name="addBtn">+</string>
    <string name="addYourProduct">+</string>
    <string name="empty_textView">please add your Product</string>
    <string name="title_empty_textvView">Your inventory is empty</string>
    <string name="add_title">Add new item</string>
    <string name="edit_title">Edit existing item</string>
    <string name="delete">DELETE</string>
    <string name="nothing_to_insert">Error saving product</string>
    <string name="insert_item_successful">Product saved</string>
    <string name="unsaved_changes_dialog_message">Do you want to quite editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="cancel">Cancel</string>
    <string name="delete_msg">do you really want to delete?</string>
    <string name="decrease_error_message">product not available</string>
</resources>
